backend/ws-server/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-server-ingress
  namespace: ws-server
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        real_ip_header X-Forwarded-For;
        real_ip_recursive on;

        proxy_http_version 1.1;

        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Upgrade $http_upgrade;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  # tls:
  # - hosts:
  #   - api.inol.cf
  #   secretName: tls-secret
  rules:
  - host: api.inol.cf
    http:
      paths:
      - path: /ws-server(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ws-server
            port:
              number: 80
